[gd_scene load_steps=19 format=3 uid="uid://cpu2pabqnow4x"]

[ext_resource type="Texture2D" uid="uid://c6p1hgjq0me8n" path="res://art/environment/breakable_door.png" id="1_2iic0"]
[ext_resource type="Script" path="res://scripts/breakableDoor.gd" id="1_gjtk4"]
[ext_resource type="PackedScene" uid="uid://cjwohg5ed45jj" path="res://scenes/Hitbox.tscn" id="3_dtg6w"]
[ext_resource type="Texture2D" uid="uid://blxw14pfg2b3q" path="res://art/environment/breakable_door_n.png" id="4_b1xt6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4vcxw"]
light_mode = 2

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pijym"]
polygon = PackedVector2Array(5, -24, 5, -19, 6, -19, 6, -18, 7, -18, 7, -16, 8, -16, 8, -10, 7, -10, 7, -4, 8, -4, 8, 4, 7, 4, 7, 10, 8, 10, 8, 16, 7, 16, 7, 18, 6, 18, 6, 19, 5, 19, 5, 24, -1, 24, -1, 1, 0, 1, 0, -1, -1, -1, -1, -24)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_uskc0"]
polygon = PackedVector2Array(-20, 24, -15, 26, -4, 28, 3, 29, 4, 24, -6, 19, -17, 18, -19, 17)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ydkan"]
polygon = PackedVector2Array(-19, -18, -21, -24, -11, -26, 3, -29, 4, -23, -5, -19, -15, -18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymuu6"]
size = Vector2(15, 48)

[sub_resource type="Curve" id="Curve_k0chp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.384615), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ndauy"]
curve = SubResource("Curve_k0chp")

[sub_resource type="Gradient" id="Gradient_12gab"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.329897, 0.701031)
colors = PackedColorArray(0.745098, 0.466667, 0.168627, 1, 0.909804, 0.756863, 0.439216, 1, 0.921569, 0.929412, 0.913725, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qmn1f"]
gradient = SubResource("Gradient_12gab")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mq2ye"]
resource_local_to_scene = true
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape_scale = Vector3(1, 1, 0)
angle_min = -90.0
angle_max = 90.0
spread = 20.0
initial_velocity_min = 100.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
damping_max = 11.584
color_ramp = SubResource("GradientTexture1D_qmn1f")
alpha_curve = SubResource("CurveTexture_ndauy")

[sub_resource type="Animation" id="Animation_w7r0o"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_unpa8"]
_data = {
"default": SubResource("Animation_w7r0o")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_eqpvy"]
diffuse_texture = ExtResource("1_2iic0")
normal_texture = ExtResource("4_b1xt6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqrmm"]
size = Vector2(9, 48)

[node name="BreakableDoor" type="StaticBody2D"]
material = SubResource("CanvasItemMaterial_4vcxw")
script = ExtResource("1_gjtk4")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_pijym")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_uskc0")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_ydkan")

[node name="Hitbox" parent="." instance=ExtResource("3_dtg6w")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(3.5, 0)
shape = SubResource("RectangleShape2D_ymuu6")

[node name="Sparks" type="GPUParticles2D" parent="."]
position = Vector2(8, 0)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_mq2ye")
lifetime = 0.25
one_shot = true
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_unpa8")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-4, 0)
texture = SubResource("CanvasTexture_eqpvy")
hframes = 2
vframes = 2
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://art/environment/",
"o_name": "breakable_door_n",
"only_visible": true,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://art/environment/door2.aseprite"
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 0)
shape = SubResource("RectangleShape2D_cqrmm")
